added SportRepository and getting the reference of the Sport entity from it