@@ -3,6 +3,7 @@ package com.karolinapakai.gymreservation.domain.coach.service;
 import com.karolinapakai.gymreservation.domain.coach.dto.CoachDTO;
 import com.karolinapakai.gymreservation.domain.coach.entity.Coach;
 import com.karolinapakai.gymreservation.domain.coach.repository.CoachRepository;
+import com.karolinapakai.gymreservation.domain.coach.repository.SportRepository;
 import com.karolinapakai.gymreservation.domain.sport.service.SportService;
 import com.karolinapakai.gymreservation.entity.Sport;
 import org.slf4j.Logger;
@@ -11,6 +12,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -24,12 +26,16 @@ public class CoachServiceImpl implements CoachService {
     @Autowired
     CoachRepository coachRepository;
 
+    @Autowired
+    SportRepository sportRepository;
+
     @Override
     public Coach addCoach(CoachDTO coachDto) {
 
-        List<Sport> sports = coachDto.getSports()
+        List<Sport> sports = coachDto.getSportIDs()
                 .stream()
-                .map(s -> sportService.convertDtoToEntity(s)).toList();
+                .map(id -> sportRepository.getReferenceById(id))
+                .collect(Collectors.toList());
 
         Coach coach = Coach.builder()
                 .name(coachDto.getName())
